[package]
name = "get-rusty"
version = "0.1.0"
edition = "2021"
authors = ["Shubham Parihar <shubhamparihar391@gmail.com>"]
description = "A simple CLI tool to make HTTP GET requests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
